# ur5_pick_and_place_task

./: ur5_isaac.usd  ur5_moveit.usd  ur5_pick_and_place.usd
datasets/coco8/labels/: train.cache  val.cache
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_viewer/lib/camera_viewer/: py_test_1  py_test_2
install/camera_viewer/share/camera_viewer/: package.sh  package.xml
install/motion_program/lib/motion_program/: motion_program
install/motion_program/share/motion_program/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motion_program/share/motion_program/cmake/: motion_programConfig.cmake
install/mtc_tutorial/share/mtc_tutorial/: package.bash  package.zsh
install/robot_description/share/robot_description/: package.sh
install/rviz_marker_tools/share/rviz_marker_tools/: local_setup.sh  package.sh
install/ur5_moveit_config/share/ur5_moveit_config/: package.sh
install/ur5_pick_place/share/ur5_pick_place/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_motion/lib/ur_motion/: pick_place
install/ur_motion/share/ur_motion/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/camera_viewer/: setup.py
src/camera_viewer/scripts/: py_test.py
src/motion_program/: CMakeLists.txt
src/motion_program/src/: motion_program.cpp
src/ur5_moveit_config/config/: ur5.srdf
src/ur_motion/: CMakeLists.txt  package.xml
src/ur_motion/src/: main.cpp
(+2 files in other folders)
