cmake_minimum_required(VERSION 3.8)
project(ur_motion)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
find_package(moveit_ros_planning_interface REQUIRED)
find_package(geometry_msgs REQUIRED)
add_executable(pick_place src/main.cpp)
ament_target_dependencies(pick_place
  rclcpp
  moveit_ros_planning_interface
  geometry_msgs
)
install(TARGETS pick_place
  DESTINATION lib/${PROJECT_NAME}
)
ament_package()
